<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.ProfileActivity">

    <ImageButton
        android:id="@+id/profilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="takePhoto" />

    <com.edtech.activities.ProfileNameEditText
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/profilePic"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:focusable="false"
        android:imeOptions="actionDone" />

    <TextView
        android:id="@+id/labelLanguages"
        android:text="@string/languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePic"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RadioGroup
        android:id="@+id/languages"
        android:checkedButton="@+id/radioEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelLanguages">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:text="@string/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioSwahili"
            android:text="@string/swahili"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:id="@+id/labelModes"
        android:text="@string/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/languages"/>

    <RadioGroup
        android:id="@+id/modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioLearningMode"
        android:layout_below="@+id/labelModes">

        <RadioButton
            android:id="@+id/radioLearningMode"
            android:text="@string/learning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioTestingMode"
            android:text="@string/testing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/modes"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Switch
        android:id="@+id/onLineSwitch"
        android:text="@string/use_online_lessons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator1"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/onLineSwitch"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <FrameLayout
        android:id="@+id/bluetooth_fragment"
        android:layout_below="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>